--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "es6-promise-always": "^0.1.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "material-icons": "^0.3.0",
