功能初步完成

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "es6-promise-always": "^0.1.0",
+    "lrz": "^4.9.40",
     "vant": "^1.6.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
